<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2ai</name>
  <version>0.1.2</version>
  <description>
    The OpenAI command for ROS 2 command line tools.
  </description>

  <maintainer email="tomoya.fujita825@gmail.com">Tomoya Fujita</maintainer>

  <license>Apache License 2.0</license>

  <author email="tomoya.fujita825@gmail.com">Tomoya Fujita</author>

  <exec_depend>curl</exec_depend>
  <exec_depend>python3-openai-pip</exec_depend>
  <exec_depend>python3-ollama-pip</exec_depend>
  <exec_depend>python3-validators</exec_depend>
  <exec_depend>ros2cli</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
